Partial create api key

--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
     </script>
 </head>
 <body>
-	<br />
-    This is a template for Monaca app.
+    <script type="text/javascript" src="./js/secrets.js"></script>
+    <script type="text/javascript" src="./js/api.js"></script>
 </body>
 </html>
