--- a/www/index.html
+++ b/www/index.html
@@ -8,11 +8,10 @@
     <script src="components/loader.js"></script>
     <link rel="stylesheet" href="components/loader.css">
     <link rel="stylesheet" href="css/style.css">
-    <script>
-    </script>
-</head>
-<body>
+    <script type="text/javascript" src="./js/md5.js"></script>
     <script type="text/javascript" src="./js/secrets.js"></script>
     <script type="text/javascript" src="./js/api.js"></script>
+</head>
+<body>
 </body>
 </html>
