--- a/www/index.html
+++ b/www/index.html
@@ -13,13 +13,30 @@
         <script src="cordova.js"></script>
         <script src="components/loader.js"></script>
         <link rel="stylesheet" href="components/loader.css" />
-        <link rel="stylesheet" href="css/style.css" />
+
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+            crossorigin="anonymous"
+        />
+        <link rel="stylesheet" href="./css/style.css" />
+        <link rel="stylesheet" href="./lib/jsonTree/jsonTree.css" />
 
         <script type="text/javascript" src="./js/md5.js"></script>
         <script type="text/javascript" src="./js/secrets.js"></script>
         <script type="text/javascript" src="./js/api.js"></script>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"
+        ></script>
     </head>
     <body>
+        <script
+            type="text/javascript"
+            src="./lib/jsonTree/jsonTree.js"
+        ></script>
         <script type="text/javascript" src="./js/app.js"></script>
     </body>
 </html>
