--- a/www/index.html
+++ b/www/index.html
@@ -23,9 +23,9 @@
         <link rel="stylesheet" href="./css/style.css" />
         <link rel="stylesheet" href="./lib/jsonTree/jsonTree.css" />
 
-        <script type="text/javascript" src="./js/md5.js"></script>
+        <script type="text/javascript" src="./js/api/md5.js"></script>
         <script type="text/javascript" src="./js/secrets.js"></script>
-        <script type="text/javascript" src="./js/api.js"></script>
+        <script src="./js/api/api.js"></script>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
