--- a/www/form.html
+++ b/www/form.html
@@ -2,8 +2,20 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+        />
+        <meta
+            http-equiv="Content-Security-Policy"
+            content="default-src * data: gap: content: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'"
+        />
+        <!-- Monaca -->
+        <script src="cordova.js"></script>
+        <script src="components/loader.js"></script>
+        <link rel="stylesheet" href="components/loader.css" />
+
+        <!-- Bootstrap -->
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -15,20 +27,33 @@
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"
         ></script>
+
+        <link rel="stylesheet" href="./lib/jsonTree/jsonTree.css" />
         <link rel="stylesheet" href="css/form.css" />
+
+        <!-- API -->
+        <script type="text/javascript" src="./js/api/md5.js"></script>
+        <script type="text/javascript" src="./js/secrets.js"></script>
+        <script src="./js/api/api.js"></script>
     </head>
     <body>
         <noscript
             >Esse app precisa de Javascript ativado para funcionar</noscript
         >
         <div class="container">
+            <header>
+                <h3>Marvel API</h3>
+                <a href="">icon</a>
+            </header>
             <form>
-                <div class="form-inputs">
-                    <fieldset class="request">
+                <fieldset class="form-inputs">
+                    <div class="request">
                         <legend>Geral</legend>
                         <div class="input">
                             <label class="form-label" for="apiType">
-                                Tipo <span class="required-icon">*</span>
+                                <b
+                                    >Tipo <span class="required-icon">*</span>
+                                </b>
                             </label>
                             <select
                                 name="apiType"
@@ -88,14 +113,12 @@
                                 class="form-control"
                             />
                         </div>
-                    </fieldset>
-                    <fieldset class="basic-filters">
-                        <!-- <legend>Filtros (opcionais)</legend> -->
-                    </fieldset>
-                    <fieldset class="advanced-filters">
-                        <!-- <legend>Filtros avançados</legend> -->
-                    </fieldset>
-                </div>
+                        <hr />
+                    </div>
+                    <div class="basic-filters"></div>
+                    <div class="extra"></div>
+                    <div class="advanced-filters"></div>
+                </fieldset>
                 <button type="submit" class="btn btn-dark" id="btn-form-submit">
                     Gerar
                 </button>
