--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <meta charset="utf-8" />
+        <meta charset="UTF-8" />
         <meta
             name="viewport"
             content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
@@ -10,112 +10,161 @@
             http-equiv="Content-Security-Policy"
             content="default-src * data: gap: content: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'"
         />
+        <!-- Monaca -->
         <script src="cordova.js"></script>
         <script src="components/loader.js"></script>
         <link rel="stylesheet" href="components/loader.css" />
 
+        <!-- Bootstrap -->
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
             rel="stylesheet"
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
             crossorigin="anonymous"
         />
-        <link rel="stylesheet" href="./css/style.css" />
-        <link rel="stylesheet" href="./lib/jsonTree/jsonTree.css" />
-
-        <script type="text/javascript" src="./js/api/md5.js"></script>
-        <script type="text/javascript" src="./js/secrets.js"></script>
-        <script src="./js/api/api.js"></script>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"
         ></script>
-    </head>
-    <body>
-        <div class="container">
-            <h1 class="page-title">Front-End Marvel API</h1>
-            <div class="input">
-                <label for="paramType" class="form-label"
-                    >Tipo de Request</label
-                >
-                <select name="paramType" id="paramType">
-                    <option value="characters">Characters</option>
-                    <option value="comics">Comics</option>
-                    <option value="creators">Creators</option>
-                    <option value="events">Events</option>
-                    <option value="series">Series</option>
-                    <option value="stories">Stories</option>
-                </select>
-            </div>
-            <div class="ui-wrapper">
-                <div class="parameters-container">
-                    <h2>Parametros Opcionais</h2>
-                    <div class="params">
-                        <div class="input">
-                            <label for="paramId" class="form-label">ID</label>
-                            <input
-                                class="form-control"
-                                type="number"
-                                name="paramId"
-                                id="paramId"
-                                style="width: 150px"
-                            />
-                        </div>
-                        <div class="input">
-                            <label for="paramNameStartsWith" class="form-label"
-                                >Nome Parcial</label
-                            >
-                            <input
-                                value=""
-                                class="form-control"
-                                type="text"
-                                name="paramNameStartsWith"
-                                id="paramNameStartsWith"
-                                style="width: 150px"
-                            />
-                        </div>
-                        <div class="input">
-                            <label for="paramLimit" class="form-label"
-                                >Limite</label
-                            >
-                            <input
-                                value="50"
-                                class="form-control"
-                                type="number"
-                                name="paramLimit"
-                                id="paramLimit"
-                                style="width: 150px"
-                            />
-                        </div>
-                        <div class="input">
-                            <label for="paramOffset" class="form-label"
-                                >Offset</label
-                            >
-                            <input
-                                value="0"
-                                class="form-control"
-                                type="number"
-                                name="paramOffset"
-                                id="paramOffset"
-                                style="width: 150px"
-                            />
-                        </div>
-                    </div>
-                    <button class="btn btn-primary" id="btnExecutar">
-                        Executar
-                    </button>
-                </div>
-                <div class="result">
-                    <h2>Resposta</h2>
-                    <div class="result-container"></div>
-                </div>
-            </div>
-        </div>
+
+        <link rel="stylesheet" href="./lib/jsonTree/jsonTree.css" />
+        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/form.css" />
+        <link rel="stylesheet" href="css/result.css" />
+
+        <!-- Bootstrap Icons -->
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+        />
+
+        <!-- API -->
+        <script type="text/javascript" src="./js/api/md5.js"></script>
+        <script type="text/javascript" src="./js/secrets.js"></script>
+        <script type="text/javascript" src="./js/api/api.js"></script>
         <script
             type="text/javascript"
             src="./lib/jsonTree/jsonTree.js"
         ></script>
-        <script type="text/javascript" src="./js/app.js"></script>
+    </head>
+    <body>
+        <header>
+            <h3>Marvel API</h3>
+            <a href="#" id="settings-icon">
+                <i class="bi bi-gear h4"></i>
+            </a>
+        </header>
+        <main>
+            <div class="content">
+                <section class="api-form">
+                    <form>
+                        <fieldset class="form-inputs">
+                            <div class="request">
+                                <legend>Geral</legend>
+                                <div class="input">
+                                    <label class="form-label" for="apiType">
+                                        <b
+                                            >Tipo
+                                            <span class="required-icon">*</span>
+                                        </b>
+                                    </label>
+                                    <select
+                                        name="apiType"
+                                        id="apiType"
+                                        class="form-select"
+                                    >
+                                        <option value="characters">
+                                            Characters
+                                        </option>
+                                        <option value="comics">Comics</option>
+                                        <option value="creators">
+                                            Creators
+                                        </option>
+                                        <option value="events">Events</option>
+                                        <option value="series">Series</option>
+                                        <option value="stories">Stories</option>
+                                    </select>
+                                </div>
+                                <div class="input">
+                                    <label class="form-label" for="apiId"
+                                        >Id</label
+                                    >
+                                    <input
+                                        type="number"
+                                        placeholder="1011334"
+                                        min="0"
+                                        step="1"
+                                        id="apiId"
+                                        name="apiId"
+                                        class="form-control"
+                                    />
+                                </div>
+                                <div class="input">
+                                    <label class="form-label" for="apiLimit"
+                                        >Limit</label
+                                    >
+                                    <input
+                                        type="number"
+                                        value="50"
+                                        placeholder="50"
+                                        step="1"
+                                        min="0"
+                                        max="100"
+                                        required
+                                        name="apiLimit"
+                                        id="apiModifiedSince"
+                                        class="form-control"
+                                    />
+                                </div>
+                                <div class="input">
+                                    <label class="form-label" for="apiOffset"
+                                        >Offset</label
+                                    >
+                                    <input
+                                        type="number"
+                                        placeholder="50"
+                                        value="0"
+                                        step="1"
+                                        min="0"
+                                        required
+                                        name="apiOffset"
+                                        id="apiModifiedSince"
+                                        class="form-control"
+                                    />
+                                </div>
+                                <hr />
+                            </div>
+                            <div class="basic-filters"></div>
+                            <div class="extra"></div>
+                            <div class="advanced-filters"></div>
+                        </fieldset>
+                        <button
+                            type="submit"
+                            class="btn btn-secondary"
+                            id="btn-form-submit"
+                        >
+                            Gerar
+                        </button>
+                    </form>
+                </section>
+                <section class="api-result">
+                    <div class="result-container"></div>
+                    <button
+                        onclick="swipe(false)"
+                        id="back-to-form"
+                        class="btn btn-secondary d-flex align-items-center m-0"
+                    >
+                        <i class="bi bi-arrow-left"></i>
+                        <span>Voltar</span>
+                    </button>
+                </section>
+            </div>
+        </main>
+
+        <script src="./js/formBuilder.js"></script>
+        <script src="./js/form.js"></script>
+        <script src="./js/result.js"></script>
+        <script src="./js/app.js"></script>
     </body>
 </html>
