New swipe implementation

--- a/www/index.html
+++ b/www/index.html
@@ -165,7 +165,7 @@
                 <section class="api-result">
                     <div class="result-container"></div>
                     <button
-                        onclick="swipe(false)"
+                        onclick="swipe(1)"
                         id="back-to-form"
                         class="btn btn-secondary d-flex align-items-center m-0"
                     >
@@ -178,6 +178,7 @@
 
         <script src="./js/formBuilder.js"></script>
         <script src="./js/form.js"></script>
+        <script src="./js/formReader.js"></script>
         <script src="./js/result.js"></script>
         <script src="./js/app.js"></script>
     </body>
