--- a/www/index.html
+++ b/www/index.html
@@ -58,7 +58,7 @@
         <main>
             <div class="content">
                 <section class="api-form">
-                    <form>
+                    <form class="api-form-form">
                         <fieldset class="form-inputs">
                             <div class="request">
                                 <legend>Geral</legend>
@@ -136,7 +136,6 @@
                                 <hr />
                             </div>
                             <div class="basic-filters"></div>
-                            <div class="extra"></div>
                             <div class="advanced-filters"></div>
                         </fieldset>
                         <div class="d-flex align-items-stretch">
