Missing animation - request button works

--- a/www/index.html
+++ b/www/index.html
@@ -58,7 +58,7 @@
         <main>
             <div class="content">
                 <section class="api-form">
-                    <form class="api-form-form">
+                    <form id="api-form">
                         <fieldset class="form-inputs">
                             <div class="request">
                                 <legend>Geral</legend>
@@ -148,7 +148,7 @@
                                     border-right: 1px solid ghostwhite;
                                 "
                             >
-                                Gerar
+                                Requisitar
                             </button>
                             <button
                                 type="reset"
