--- a/www/index.html
+++ b/www/index.html
@@ -38,20 +38,15 @@
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
         />
-
-        <!-- API -->
-        <script type="text/javascript" src="./js/api/md5.js"></script>
-        <script type="text/javascript" src="./js/secrets.js"></script>
-        <script type="text/javascript" src="./js/api/api.js"></script>
-        <script
-            type="text/javascript"
-            src="./lib/jsonTree/jsonTree.js"
-        ></script>
     </head>
     <body>
         <header>
             <h3>Marvel API</h3>
-            <a href="#" id="settings-icon">
+            <a
+                id="settings-icon"
+                data-bs-toggle="modal"
+                data-bs-target="#optionsModal"
+            >
                 <i class="bi bi-gear h4"></i>
             </a>
         </header>
@@ -160,6 +155,63 @@
                             </button>
                         </div>
                     </form>
+                    <div
+                        class="modal fade"
+                        id="optionsModal"
+                        tabindex="-1"
+                        aria-labelledby="exampleModalLabel"
+                        aria-hidden="true"
+                        data-bs-backdrop="static"
+                        data-bs-keyboard="false"
+                    >
+                        <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h1 class="modal-title fs-5">Opções</h1>
+                                    <button
+                                        type="button"
+                                        class="btn-close"
+                                        data-bs-dismiss="modal"
+                                        onclick="overrideInputs()"
+                                        aria-label="Close"
+                                    ></button>
+                                </div>
+                                <div class="modal-body">
+                                    <label for="pubKey" class="form-label"
+                                        >Chave Pública</label
+                                    >
+                                    <input
+                                        class="form-control"
+                                        id="pubKey"
+                                        name="pubKey"
+                                        type="text"
+                                        value=""
+                                        onkeypress="return filterKeyPressHexOnly(event)"
+                                    />
+                                    <label for="privateKey" class="form-label"
+                                        >Chave Privada</label
+                                    >
+                                    <input
+                                        class="form-control"
+                                        id="privateKey"
+                                        name="privateKey"
+                                        type="text"
+                                        onkeypress="return filterKeyPressHexOnly(event);"
+                                    />
+                                </div>
+                                <div class="modal-footer">
+                                    <span id="configMessage"></span>
+                                    <button
+                                        type="button"
+                                        class="btn btn-primary"
+                                        onclick="saveConfigs();"
+                                    >
+                                        Salvar
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </section>
                 <section class="api-result">
                     <div class="result">
@@ -202,6 +254,18 @@
             </div>
         </main>
 
+        <!-- API -->
+        <script type="text/javascript" src="./js/api/md5.js"></script>
+        <script type="text/javascript" src="./js/secrets.js"></script>
+        <script type="text/javascript" src="./js/api/api.js"></script>
+
+        <!-- Libraries -->
+        <script
+            type="text/javascript"
+            src="./lib/jsonTree/jsonTree.js"
+        ></script>
+
+        <!-- Scripts -->
         <script src="./js/formBuilder.js"></script>
         <script src="./js/formReader.js"></script>
         <script src="./js/config.js"></script>
